--- a/about.html
+++ b/about.html
@@ -415,7 +415,7 @@
                             Copyright &copy;
                             <script>
                                 document.write(new Date().getFullYear());
-                            </script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://girish.ga" target="_blank">Girish Ban</a>
+                            </script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="http://girishban.tech" target="_blank">Girish Ban</a>
 
                         </p>
                     </div>
